@@ -2,7 +2,7 @@
 chains.h - Parse for macromolecule chains and residues
  
 Copyright (C) 1998-2001 by OpenEye Scientific Software, Inc.
-Some portions Copyright (C) 2001-2005 by Geoffrey R. Hutchison
+Some portions Copyright (C) 2001-2006 by Geoffrey R. Hutchison
  
 This file is part of the Open Babel project.
 For more information, see <http://openbabel.sourceforge.net/>
@@ -26,80 +26,84 @@ GNU General Public License for more details.
 namespace OpenBabel
 {
 
-class OBAtom;
-class OBMol;
+  class OBAtom;
+  class OBMol;
 
-//! Structure for atomic patterns (templates) in residues for OBChainsParser
-typedef struct
-{
-    int flag;
-    short elem, count;
-    int n1, n2, n3, n4;
-}
-Template;
+  //! Structure for atomic patterns (templates) in residues for OBChainsParser
+  //! Implementation and documentation in chains.cpp
+  typedef struct Template Template;
 
-//! \brief Perceives peptide or nucleotide chains and residues in an OBMol
-class OBAPI OBChainsParser
-{
-public:
+  //! \brief Perceives peptide or nucleotide chains and residues in an OBMol
+  //
+  //! Perceive peptide or nucleotide chains and residues from atom connectivity.
+  //! Based on original RasMol code by Roger Sayle and modified by Joe Corkery.
+  //! For more on Roger's original talk, see:
+  //!  http://www.daylight.com/meetings/mug96/sayle/sayle.html
+  class OBAPI OBChainsParser
+    {
+    public:
 
-    OBChainsParser(void);
-    ~OBChainsParser(void);
+      OBChainsParser(void);
+      ~OBChainsParser(void);
 
-    bool PerceiveChains(OBMol &, bool nukeSingleResidue = false);
+      //! Perceive macromolecular (peptide and nucleotide) residues and chains
+      //! \param mol - the molecule to parse and update
+      //! \param nukeSingleResidue - if only one residue is found, clear information
+      //!   default = false  -- single residue files should still be recognized.
+      bool PerceiveChains(OBMol &mol, bool nukeSingleResidue = false);
 
-private: // methods
+    private: // internal methods
 
-    bool  DetermineHetAtoms(OBMol &);
-    bool  DetermineConnectedChains(OBMol &);
-    bool  DeterminePeptideBackbone(OBMol &);
-    bool  DeterminePeptideSidechains(OBMol &);
-    bool  DetermineNucleicBackbone(OBMol &);
-    bool  DetermineNucleicSidechains(OBMol &);
-    bool  DetermineHydrogens(OBMol &);
+      bool  DetermineHetAtoms(OBMol &);
+      bool  DetermineConnectedChains(OBMol &);
+      bool  DeterminePeptideBackbone(OBMol &);
+      bool  DeterminePeptideSidechains(OBMol &);
+      bool  DetermineNucleicBackbone(OBMol &);
+      bool  DetermineNucleicSidechains(OBMol &);
+      bool  DetermineHydrogens(OBMol &);
 
-    void  SetupMol(OBMol &);
-    void  SetResidueInformation(OBMol &, bool nukeSingleResidue);
-    void  ClearResidueInformation(OBMol &);
-    void  CleanupMol(void);
+      void  SetupMol(OBMol &);
+      void  SetResidueInformation(OBMol &, bool nukeSingleResidue);
+      void  ClearResidueInformation(OBMol &);
+      void  CleanupMol(void);
 
-    void  AssignResidue(OBMol &, int, int, int);
-    int   IdentifyResidue(void *, OBMol &, int, int); // ByteCode *
+      void  AssignResidue(OBMol &, int, int, int);
+      int   IdentifyResidue(void *, OBMol &, int, int); // ByteCode *
 
-    void  DefineMonomer(void **, int, char *); // ByteCode **
-    int   IdentifyElement(char *);
+      void  DefineMonomer(void **, int, char *); // ByteCode **
+      int   IdentifyElement(char *);
 
-    bool  MatchConstraint(OBAtom *, int);
-    bool  Match2Constraints(Template *, OBAtom *, OBAtom *);
-    bool  Match3Constraints(Template *, OBAtom *, OBAtom *, OBAtom *);
-    bool  Match4Constraints(Template *, OBAtom *, OBAtom *, OBAtom *, OBAtom *);
+      bool  MatchConstraint(OBAtom *, int);
+      bool  Match2Constraints(Template *, OBAtom *, OBAtom *);
+      bool  Match3Constraints(Template *, OBAtom *, OBAtom *, OBAtom *);
+      bool  Match4Constraints(Template *, OBAtom *, OBAtom *, OBAtom *, OBAtom *);
 
-    void  ConstrainBackbone(OBMol &, Template *, int);
+      void  ConstrainBackbone(OBMol &, Template *, int);
 
-    int   RecurseChain(OBMol &, int, int);
-    void  TraceNucleicChain(OBMol &, int, int);
-    void  TracePeptideChain(OBMol &, int, int);
+      int   RecurseChain(OBMol &, int, int);
+      void  TraceNucleicChain(OBMol &, int, int);
+      void  TracePeptideChain(OBMol &, int, int);
 
-    char *ParseSmiles(char *, int);
+      char *ParseSmiles(char *, int);
 
-private: // members
+    private: // members
 
-    void *PDecisionTree; // ByteCode *
-    void *NDecisionTree; // ByteCode *
+      void *PDecisionTree; // ByteCode *
+      void *NDecisionTree; // ByteCode *
 
-    int   ResMonoAtom[MaxMonoAtom];
-    int   ResMonoBond[MaxMonoBond];
+      int   ResMonoAtom[MaxMonoAtom];
+      int   ResMonoBond[MaxMonoBond];
 
-    unsigned short *bitmasks;
-    unsigned char  *resids;
-    unsigned char  *flags;
-    bool           *hetflags;
-    short          *atomids;
-    short          *resnos;
-    short          *sernos;
-    char           *hcounts;
-    char           *chains;
-};
+      unsigned short *bitmasks;
+      unsigned char  *resids;
+      unsigned char  *flags;
+      bool           *hetflags;
+      short          *atomids;
+      short          *resnos;
+      short          *sernos; //!< array of residue serial numbers
+      char           *hcounts;
+      char           *chains;
+    };
 
 }
 #endif // OB_CHAINS_H
